# opengl-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  imgui.ini
setup/: linux.sh  macos.sh
src/: main.cpp
